# event-module

./: Cargo.toml  build.rs  readme.md
dart_packages/event_module/: generate_protocols.ps1  pubspec.yaml
dart_packages/event_module/android/: local.properties
dart_packages/event_module/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
dart_packages/event_module/lib/: event_module.dart  manage_ids.dart
dart_packages/event_module/lib/ids/: field_ids.dart
dart_packages/event_module/test/: event_module_test.dart
dart_packages/event_system_codes/: pubspec.yaml
dart_packages/event_system_codes/lib/: event_system_codes.dart  field_ids.dart  manage_ids.dart
dart_packages/event_system_codes/test/: event_system_codes_test.dart
documents/: 事件.md  事件定义过程.md  事件模块目标和能力.md  事件系统概念.md  事件触发和处理过程.md  事件队列.md
manage_defines/: 10003_event_server.toml  10004_event_types.toml  10020_event_emitters.toml  10028_event_listeners.toml  10301_event_server.toml  10302_event_types.toml  10303_event_emitters.toml  10304_event_listeners.toml
protocols/: event.proto  event_module.proto  event_proto.proto  event_server.proto
src/: dispatch_event.rs  dispatch_local_set.rs  dispatcher.rs  dispatchers_map.rs  emitter_delegator.rs  event_echo_type.rs  event_echo_wrapper.rs  event_inner_wrapper.rs  event_module.rs  event_protocol.rs  event_service_configs.rs  event_service_handle.rs  field_ids.rs  initialize_event_service.rs  lib.rs  listener_delegator.rs  listener_instance.rs  type_dispatcher_map.rs  types.rs
src/back_up/: emitter.rs  event.rs  event_queue.rs  event_type.rs  events_map.rs  handle.rs  handles_map.rs  listener.rs  queque_recievers.rs  queue.rs  queues_map.rs
src/dispatch_channels/: create_dispatch_channel.rs  dispatch_to_channel.rs  event_type_dispatch_sender_map.rs  make_dispatch_channels_ready.rs  mod.rs
src/dispatch_queue/: add_event_echo_wrapper_to_queue.rs  dispatch.rs  event_type_queue_map.rs  make_dispatch_queue_ready.rs  mod.rs
src/emitter_delegators_map/: get_emitter_delegator.rs  get_emitter_delegators_map.rs  mod.rs
src/emitters_map/: get_emitter.rs  get_emitters_map.rs  get_event_type_emitters_map.rs  mod.rs
src/event_message/: event_message_field_data.rs  event_message_field_data_type.rs  event_message_field_info.rs  event_messsage_field.rs  mod.rs
src/event_queue_map/: get_event_queue.rs  get_events_queue_map.rs  mod.rs
src/event_service/: deregister_event_type.rs  echo_event.rs  mod.rs  push_event.rs  unlisten_event_type.rs
src/event_services/: deregister_emitter.rs  deregister_event_type.rs  event_runtime.rs  has_max_evnet_type_count_reached.rs  has_max_listener_instance_count_reached.rs  listen_event_type.rs  mod.rs  register_emitter.rs  register_event_type.rs
src/event_type_listeners_map/: add_event_type_listener.rs  get_event_type_listener_map.rs  get_event_type_listeners_map.rs  mod.rs
src/event_types_map/: deregister_event_type.rs  event_types_map.rs  get_event_serial_number.rs  get_event_type.rs  get_event_types.rs  init_event_types_map.rs  mod.rs  register_event_type.rs
src/ids_codes/: field_ids.rs  manage_ids.rs  mod.rs
src/listener_instances_map/: add_listener_instance.rs  get_first_none_index.rs  get_listener_instance_sender.rs  listener_instances_map.rs  mod.rs  remove_listener_instance.rs
src/listener_senders_map/: add_listener_sender.rs  get_first_none_index.rs  get_listener_instance_sender.rs  listener_senders_map.rs  mod.rs  remove_listener_sender.rs
src/listeners_map/: get_event_type_listeners_map.rs  get_listeners_map.rs  mod.rs
src/managers/: event_emitters_manager.rs  event_listeners_manager.rs  event_types_manager.rs  mod.rs
src/protocols/: event.cashmere.rs  mod.rs
src/service_handles/: dispatch_event.rs  dispatch_to_listener_instance.rs  handle_emit_event.rs  handle_emit_event_to_instance.rs  handle_list_event_types.rs  handle_list_listener_instances.rs  handle_listen_event_type.rs  handle_register_emmiter.rs  handle_register_event_type.rs  handle_register_listener.rs  mod.rs
src/type_listeners_map/: add_listener_sender.rs  mod.rs  remove_listener_sender.rs  type_listeners_map.rs
(+8 files in other folders)
