[package]
name = "event_module"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.13"
tokio = { version = "1.21.2", features = ["full"] }
tokio-stream = "0.1.11"
tonic = { version = "0.7.2", features = ["tls"] }
prost = "0.10.4"
bson = "2.4.0"
serde = "1.0.131"
serde_derive = "1.0.131"
parking_lot = "0.12.1"
log = "0.4.14"
rust-i18n= "1.0"
once_cell = "1.8.0"
chrono = "0.4.24"

account = { path = "../cashmere_core/account" }
cash_core = { path = "../cashmere_core/cash_core" }
cash_result = { path = "../cashmere_core/cash_result" }
data_server = { path = "../cashmere_core/data_server" }
configs = { path = "../cashmere_core/configs" }
majordomo = { path = "../cashmere_core/majordomo" }

managers = { path = "../cashmere_core/managers" }
service_common_handles = { path = "../cashmere_core/service_common_handles" }
manage_define = { path = "../cashmere_core/manage_define" }
auth = { path = "../cashmere_core/auth" }
entity = { path = "../cashmere_core/entity" }
property_field = { path = "../cashmere_core/property_field" }
view = { path = "../cashmere_core/view" }
request_utils = { path = "../cashmere_core/request_utils" }

[build-dependencies]
tonic-build = "0.7.2"
manage_define = { path = "../cashmere_core/manage_define" }
