[package]
name = "event_module"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.9.2", features = ["tls"] }
prost = "0.11"
serde = "1.0.131"
serde_derive = "1.0.131"
rust-i18n= "1.2"
once_cell = "1.10"

dependencies_sync = { path = "../cashmere_core/dependencies_sync", features = ["bson", "tokio", "tokio-stream", "futures", "log", "tonic", "chrono"]}

cash_core = { path = "../cashmere_core/cash_core" }
cash_result = { path = "../cashmere_core/cash_result" }
data_server = { path = "../cashmere_core/data_server" }
configs = { path = "../cashmere_core/configs" }
majordomo = { path = "../cashmere_core/majordomo" }

managers = { path = "../cashmere_core/managers" }
manage_define = { path = "../cashmere_core/manage_define" }
auth = { path = "../cashmere_core/auth" }
entity = { path = "../cashmere_core/entity" }
property_field = { path = "../cashmere_core/property_field" }
view = { path = "../cashmere_core/view" }
request_utils = { path = "../cashmere_core/request_utils" }
service_utils = { path = "../cashmere_core/service_utils" }

[build-dependencies]
tonic-build = "0.7.2"
manage_define = { path = "../cashmere_core/manage_define" }

[features]
view_rules_validate = ["view/view_rules_validate"]
