[package]
name = "event_module"
version = "0.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12.1"
serde = "1.0"
serde_derive = "1.0"

dependencies_sync = { path = "../cashmere_core/dependencies_sync", features = [
  "tonic",
  "bson",
  "tokio",
  "tokio-stream",
  "futures",
  "log",
  "tonic",
  "chrono",
  "rust-i18n",
  "once_cell",
] }

cash_core = { path = "../cashmere_core/cash_core" }
cash_result = { path = "../cashmere_core/cash_result" }
configs = { path = "../cashmere_core/configs" }
majordomo = { path = "../cashmere_core/majordomo" }

managers = { path = "../cashmere_core/managers" }
manage_define = { path = "../cashmere_core/manage_define" }
auth = { path = "../cashmere_core/auth" }
entity = { path = "../cashmere_core/entity" }
view = { path = "../cashmere_core/view" }
request_utils = { path = "../cashmere_core/request_utils" }
service_utils = { path = "../cashmere_core/service_utils" }
validates = { path = "../cashmere_core/validates" }

[build-dependencies]
dependencies_sync = { path = "../cashmere_core/dependencies_sync", features = [
  "tonic-build",
] }
define_utils = { path = "../cashmere_core/define_utils" }

[features]
default = ["use_channel_dispatch"]
use_channel_dispatch = []
use_queue_dispatch = []
